[package]
name = "budget_planner"
version = "1.0.1"
edition = "2021"
authors = ["PeuTit"]
license = "MIT"
description = "A cli app used to split a year into budget months to help with personal budget planning"
readme = "readme.md"
homepage = "https://github.com/PeuTit/budget_planner"
repository = "https://github.com/PeuTit/budget_planner"
keywords = ["cli", "budget"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
